k8s/treafik-config/traefik-petclinic-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: petclinic
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`petclinic.local`)
      kind: Rule
      services:
        - name: api-gateway
          namespace : spring-petclinic
          port: 80
    - match: (Host(`petclinic.local`) && Path(`/api/vet`))
      kind: Rule
      services:
        - name: vets-service
          namespace : spring-petclinic
          port: 8080
    - match: (Host(`petclinic.local`) && Path(`/api/customer`))
      kind: Rule
      services:
        - name: customers-service
          namespace :  spring-petclinic
          port: 8080
    - match: (Host(`petclinic.local`) && Path(`/api/visit`))
      kind: Rule
      services:
        - name: visits-service
          namespace : spring-petclinic
          port: 8080
